Добавил section-promo

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Мой сайт портфолио</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Philosopher:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style/style.css" />
   </head>
   <body>
@@ -125,7 +129,30 @@
         </div>
       </div>
     </header>
-
+    <main>
+      <section class="promo">
+        <div class="center">
+          <div class="promo__wrp">
+            <div class="promo__image"></div>
+            <div class="promo__discription">
+              <span class="promo__name">Денис Никишков</span>
+              <h1 class="promo__title">HTML-верстальщик</h1>
+              <p class="promo__discription-text">
+                Привет! Меня зовут Денис! Я выпускник онлайн школы
+                <a href="https://gb.ru" target="_blank">GeekBrains!</a> Закончил
+                курс по специальности It-специалист-Вёрстка!В данный момент
+                прохожу обучение по специальности: Frontend-разработчик! Мой
+                опыт в сфере веб-верстки более 8-ми месяцев, за этот период мною
+                выполнены 6 проектов в целях учебной разработки. В свое
+                свободное время я люблю верстать интересные макеты и постоянно
+                совершенствую свои знания.
+              </p>
+              <a class="promo__link" href="#">Связь со мной</a>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <script
       src="https://kit.fontawesome.com/7721ad634a.js"
       crossorigin="anonymous"
