--- a/index.html
+++ b/index.html
@@ -152,6 +152,27 @@
           </div>
         </div>
       </section>
+      <section class="certificates">
+        <div class="center">
+          <h2 class="certificates__title">Свидетельства</h2>
+          <div class="certificates__image-wrapper">
+            <a href="img/sertificats/sertificat1.jpg" target="_blank"
+              ><img
+                class="certificates__image"
+                src="img/sertificats/sertificat1.jpg"
+                alt=""
+                width="600"
+            /></a>
+            <a href="img/sertificats/sertificat2.jpg" target="_blank"
+              ><img
+                class="certificates__image"
+                src="img/sertificats/sertificat2.jpg"
+                alt=""
+                width="600"
+            /></a>
+          </div>
+        </div>
+      </section>
       <section class="skills">
         <div class="center">
           <h2 class="skills__title" id="002">Мои навыки</h2>
@@ -1358,12 +1379,59 @@
         </div>
       </section>
       <section class="projects">
-        <div class="center"></div>
+        <div class="center">
+          <h3 class="projects__title">Проекты</h3>
+          <div class="slider">
+            <div class="slider-line">
+              <div class="slider-item">
+                <img
+                  class="slider-image"
+                  src="img/slider-projects/analytics.jpg"
+                  alt="Сайт Аналитик"
+                />
+              </div>
+              <div class="slider-item">
+                <img
+                  class="slider-image"
+                  src="img/slider-projects/book-shop.jpg"
+                  alt="Сайт книжный магазин"
+                />
+              </div>
+              <div class="slider-item">
+                <img
+                  class="slider-image"
+                  src="img/slider-projects/burger.jpg"
+                  alt="Сайт бургеры"
+                />
+              </div>
+              <div class="slider-item">
+                <img
+                  class="slider-image"
+                  src="img/slider-projects/firemoney.jpg"
+                  alt="Сайт firemoney"
+                />
+              </div>
+              <div class="slider-item">
+                <img
+                  class="slider-image"
+                  src="img/slider-projects/Replication.jpg"
+                  alt="Сайт реплики картин"
+                />
+              </div>
+            </div>
+            <button class="slider-prev"></button>
+            <button class="slider-next"></button>
+            <div class="slider-wrapper">
+              <div class="slider-dot active-dot"></div>
+              <div class="slider-dot"></div>
+              <div class="slider-dot"></div>
+              <div class="slider-dot"></div>
+              <div class="slider-dot"></div>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
-    <script
-      src="https://kit.fontawesome.com/7721ad634a.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
