--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
       </section>
       <section class="certificates">
         <div class="center">
-          <h2 class="certificates__title">Свидетельства</h2>
+          <h2 class="certificates__title">Свидетельства об обучении</h2>
           <div class="certificates__image-wrapper">
             <a href="img/sertificats/sertificat1.jpg" target="_blank"
               ><img
@@ -1384,6 +1384,13 @@
           <div class="slider">
             <div class="slider-line">
               <div class="slider-item">
+                <div class="slider__link-wrp">
+                  <h4 class="slider__subtitle">Учебный проект</h4>
+                  <div>
+                    <a class="slider__link-site" href="!#">Перейти на сайт</a>
+                    <a class="slider__link-code" href="!#">Посмотреть код</a>
+                  </div>
+                </div>
                 <img
                   class="slider-image"
                   src="img/slider-projects/analytics.jpg"
@@ -1391,6 +1398,13 @@
                 />
               </div>
               <div class="slider-item">
+                <div class="slider__link-wrp">
+                  <h4 class="slider__subtitle">Проект для портфолио</h4>
+                  <div>
+                    <a class="slider__link-site" href="!#">Перейти на сайт</a>
+                    <a class="slider__link-code" href="!#">Посмотреть код</a>
+                  </div>
+                </div>
                 <img
                   class="slider-image"
                   src="img/slider-projects/book-shop.jpg"
@@ -1398,6 +1412,15 @@
                 />
               </div>
               <div class="slider-item">
+                <div class="slider__link-wrp">
+                  <h4 class="slider__subtitle">
+                    Проект собранный на интенсиве от Айтилогии
+                  </h4>
+                  <div>
+                    <a class="slider__link-site" href="!#">Перейти на сайт</a>
+                    <a class="slider__link-code" href="!#">Посмотреть код</a>
+                  </div>
+                </div>
                 <img
                   class="slider-image"
                   src="img/slider-projects/burger.jpg"
@@ -1405,6 +1428,13 @@
                 />
               </div>
               <div class="slider-item">
+                <div class="slider__link-wrp">
+                  <h4 class="slider__subtitle">Проект с группой</h4>
+                  <div>
+                    <a class="slider__link-site" href="!#">Перейти на сайт</a>
+                    <a class="slider__link-code" href="!#">Посмотреть код</a>
+                  </div>
+                </div>
                 <img
                   class="slider-image"
                   src="img/slider-projects/firemoney.jpg"
@@ -1412,10 +1442,31 @@
                 />
               </div>
               <div class="slider-item">
+                <div class="slider__link-wrp">
+                  <h4 class="slider__subtitle">Проект с группой</h4>
+                  <div>
+                    <a class="slider__link-site" href="!#">Перейти на сайт</a>
+                    <a class="slider__link-code" href="!#">Посмотреть код</a>
+                  </div>
+                </div>
                 <img
                   class="slider-image"
                   src="img/slider-projects/Replication.jpg"
                   alt="Сайт реплики картин"
+                />
+              </div>
+              <div class="slider-item">
+                <div class="slider__link-wrp">
+                  <h4 class="slider__subtitle">Учебный проект</h4>
+                  <div>
+                    <a class="slider__link-site" href="!#">Перейти на сайт</a>
+                    <a class="slider__link-code" href="!#">Посмотреть код</a>
+                  </div>
+                </div>
+                <img
+                  class="slider-image"
+                  src="img/slider-projects/digital-marketing.jpg"
+                  alt="Сайт маркетинговый"
                 />
               </div>
             </div>
@@ -1423,6 +1474,7 @@
             <button class="slider-next"></button>
             <div class="slider-wrapper">
               <div class="slider-dot active-dot"></div>
+              <div class="slider-dot"></div>
               <div class="slider-dot"></div>
               <div class="slider-dot"></div>
               <div class="slider-dot"></div>
