добавил мобильное меню

--- a/index.html
+++ b/index.html
@@ -144,6 +144,51 @@
                 <a class="page-header__item-link" href="#005">Контакты</a>
               </li>
             </ul>
+            <div class="mobile-menu">
+              <input type="checkbox" id="menu-switch" />
+              <label class="mobile-menu__icon" for="menu-switch">
+                <span></span>
+              </label>
+              <div class="mobile-menu__wrapper">
+                <div class="mobile-menu__block">
+                  <ul class="mobile-menu__list">
+                    <li class="mobile-menu__item">Меню</li>
+                    <li class="mobile-menu__item">
+                      <a class="mobile-menu__link" href="#003">Проекты</a>
+                    </li>
+                    <li class="mobile-menu__item">
+                      <a class="mobile-menu__link" href="#001">Обо мне</a>
+                    </li>
+                    <li class="mobile-menu__item">
+                      <a class="mobile-menu__link" href="#002">Навыки</a>
+                    </li>
+                    <li class="mobile-menu__item">
+                      <a class="mobile-menu__link" href="#005">Контакты</a>
+                    </li>
+                  </ul>
+                  <div class="social-logo-wrp">
+                    <a
+                      class="page-footer__link-icon"
+                      href="https://t.me/DENNIK_28_02"
+                      target="_blank"
+                      ><img
+                        class="page-footer__image-icon"
+                        src="img/footer/telegram-icon.png"
+                        alt="Телеграм"
+                    /></a>
+                    <a
+                      class="page-footer__link-icon"
+                      href="https://instagram.com/denis_nikishkov245?utm_source=qr&igshid=ZDc4ODBmNjlmNQ%3D%3D"
+                      target="_blank"
+                      ><img
+                        class="page-footer__image-icon"
+                        src="img/footer/instagram-icon.png"
+                        alt="Инстаграм"
+                    /></a>
+                  </div>
+                </div>
+              </div>
+            </div>
           </nav>
         </div>
       </div>
