Изменил блок с сертификатами

--- a/index.html
+++ b/index.html
@@ -216,73 +216,108 @@
           </div>
         </div>
       </section>
-      <section class="certificates">
+      <section class="projects">
         <div class="center">
-          <h2 class="certificates__title">Свидетельства об обучении</h2>
-          <div class="certificates__image-wrapper">
-            <a href="img/sertificats/sertificat1.jpg" target="_blank"
-              ><img
-                class="certificates__image"
-                src="img/sertificats/sertificat1.jpg"
-                alt="Сертификат об окончании"
-                width="600"
-            /></a>
-            <a href="img/sertificats/sertificat2.jpg" target="_blank"
-              ><img
-                class="certificates__image"
-                src="img/sertificats/sertificat2.jpg"
-                alt="Сертификат об окончании"
-                width="600"
-            /></a>
-            <a href="img/sertificats/html.jpg" target="_blank"
-              ><img
-                class="certificates__image"
-                src="img/sertificats/html.jpg"
-                alt="Сертификат Вёрстка"
-                width="600"
-            /></a>
-            <a href="img/sertificats/html-seminar.jpg" target="_blank"
-              ><img
-                class="certificates__image"
-                src="img/sertificats/html-seminar.jpg"
-                alt="Сертификат Вёрстка"
-                width="600"
-            /></a>
-            <a href="img/sertificats/javaScript.jpg" target="_blank"
-              ><img
-                class="certificates__image"
-                src="img/sertificats/javaScript.jpg"
-                alt="Сертификат Джава скрипт"
-                width="600"
-            /></a>
-            <a href="img/sertificats/javaScript-seminar.jpg" target="_blank"
-              ><img
-                class="certificates__image"
-                src="img/sertificats/javaScript-seminar.jpg"
-                alt="Сертификат Джава скрипт"
-                width="600"
-            /></a>
-            <a href="img/sertificats/git.jpg" target="_blank"
-              ><img
-                class="certificates__image"
-                src="img/sertificats/git.jpg"
-                alt="Сертификат Гит"
-                width="600"
-            /></a>
-            <a href="img/sertificats/git-seminar.jpg" target="_blank"
-              ><img
-                class="certificates__image"
-                src="img/sertificats/git-seminar.jpg"
-                alt="Сертификат Гит"
-                width="600"
-            /></a>
-            <a href="img/sertificats/final examination.jpg" target="_blank"
-              ><img
-                class="certificates__image"
-                src="img/sertificats/final examination.jpg"
-                alt="Сертификат итоговая аттестация"
-                width="600"
-            /></a>
+          <h3 class="projects__title" id="003">Проекты</h3>
+          <div class="slider">
+            <div class="slider-line">
+              <div class="slider-item">
+                <div class="slider__link-wrp">
+                  <h4 class="slider__subtitle">Учебный проект</h4>
+                  <div>
+                    <a class="slider__link-site" href="!#">Перейти на сайт</a>
+                    <a class="slider__link-code" href="!#">Посмотреть код</a>
+                  </div>
+                </div>
+                <img
+                  class="slider-image"
+                  src="img/slider-projects/analytics.jpg"
+                  alt="Сайт Аналитик"
+                />
+              </div>
+              <div class="slider-item">
+                <div class="slider__link-wrp">
+                  <h4 class="slider__subtitle">Проект для портфолио</h4>
+                  <div>
+                    <a class="slider__link-site" href="!#">Перейти на сайт</a>
+                    <a class="slider__link-code" href="!#">Посмотреть код</a>
+                  </div>
+                </div>
+                <img
+                  class="slider-image"
+                  src="img/slider-projects/book-shop.jpg"
+                  alt="Сайт книжный магазин"
+                />
+              </div>
+              <div class="slider-item">
+                <div class="slider__link-wrp">
+                  <h4 class="slider__subtitle">
+                    Проект собранный на интенсиве
+                  </h4>
+                  <div>
+                    <a class="slider__link-site" href="!#">Перейти на сайт</a>
+                    <a class="slider__link-code" href="!#">Посмотреть код</a>
+                  </div>
+                </div>
+                <img
+                  class="slider-image"
+                  src="img/slider-projects/burger.jpg"
+                  alt="Сайт бургеры"
+                />
+              </div>
+              <div class="slider-item">
+                <div class="slider__link-wrp">
+                  <h4 class="slider__subtitle">Проект с группой</h4>
+                  <div>
+                    <a class="slider__link-site" href="!#">Перейти на сайт</a>
+                    <a class="slider__link-code" href="!#">Посмотреть код</a>
+                  </div>
+                </div>
+                <img
+                  class="slider-image"
+                  src="img/slider-projects/firemoney.jpg"
+                  alt="Сайт firemoney"
+                />
+              </div>
+              <div class="slider-item">
+                <div class="slider__link-wrp">
+                  <h4 class="slider__subtitle">Проект с группой</h4>
+                  <div>
+                    <a class="slider__link-site" href="!#">Перейти на сайт</a>
+                    <a class="slider__link-code" href="!#">Посмотреть код</a>
+                  </div>
+                </div>
+                <img
+                  class="slider-image"
+                  src="img/slider-projects/Replication.jpg"
+                  alt="Сайт реплики картин"
+                />
+              </div>
+              <div class="slider-item">
+                <div class="slider__link-wrp">
+                  <h4 class="slider__subtitle">Учебный проект</h4>
+                  <div>
+                    <a class="slider__link-site" href="!#">Перейти на сайт</a>
+                    <a class="slider__link-code" href="!#">Посмотреть код</a>
+                  </div>
+                </div>
+                <img
+                  class="slider-image"
+                  src="img/slider-projects/digital-marketing.jpg"
+                  alt="Сайт маркетинговый"
+                />
+              </div>
+            </div>
+            <button class="slider-prev"></button>
+            <button class="slider-next"></button>
+            <div class="slider-wrapper">
+              <div class="slider-dot active-dot"></div>
+              <div class="slider-dot"></div>
+              <div class="slider-dot"></div>
+              <div class="slider-dot"></div>
+              <div class="slider-dot"></div>
+              <div class="slider-dot"></div>
+            </div>
           </div>
         </div>
       </section>
@@ -745,7 +780,7 @@
                   class="skills__image"
                   src="img/skills/skill-visual-studio-96.png"
                   alt="visual studio cod"
-                /><span class="skills__name">Visual studio code</span>
+                /><span class="skills__name">Visual Studio Code</span>
                 <div class="skills__reating">
                   <svg
                     class="active"
@@ -1195,7 +1230,7 @@
                   class="skills__image"
                   src="img/skills/skill-github-96.png"
                   alt="github"
-                /><span class="skills__name">Github</span>
+                /><span class="skills__name">GitHub</span>
                 <div class="skills__reating">
                   <svg
                     class="active"
@@ -1491,108 +1526,111 @@
           </ul>
         </div>
       </section>
-      <section class="projects">
+      <section class="certificates">
         <div class="center">
-          <h3 class="projects__title" id="003">Проекты</h3>
-          <div class="slider">
-            <div class="slider-line">
-              <div class="slider-item">
-                <div class="slider__link-wrp">
-                  <h4 class="slider__subtitle">Учебный проект</h4>
-                  <div>
-                    <a class="slider__link-site" href="!#">Перейти на сайт</a>
-                    <a class="slider__link-code" href="!#">Посмотреть код</a>
-                  </div>
-                </div>
-                <img
-                  class="slider-image"
-                  src="img/slider-projects/analytics.jpg"
-                  alt="Сайт Аналитик"
+          <h2 class="certificates__title">Свидетельства об обучении</h2>
+          <div class="certificates__image-wrapper">
+            <div class="faq">
+              <div class="faq-item">
+                <input
+                  class="faq-input"
+                  type="checkbox"
+                  name="faq"
+                  id="faq_1"
                 />
-              </div>
-              <div class="slider-item">
-                <div class="slider__link-wrp">
-                  <h4 class="slider__subtitle">Проект для портфолио</h4>
-                  <div>
-                    <a class="slider__link-site" href="!#">Перейти на сайт</a>
-                    <a class="slider__link-code" href="!#">Посмотреть код</a>
-                  </div>
+                <label class="faq-title" for="faq_1"
+                  >Веб-вёрстка HTML CSS</label
+                >
+                <div class="faq-text">
+                  <a href="img/sertificats/html.jpg" target="_blank"
+                    >HTML CSS-лекции</a
+                  >
+                  <a href="img/sertificats/html-seminar.jpg" target="_blank"
+                    >HTML CSS-Семинары</a
+                  >
                 </div>
-                <img
-                  class="slider-image"
-                  src="img/slider-projects/book-shop.jpg"
-                  alt="Сайт книжный магазин"
-                />
               </div>
-              <div class="slider-item">
-                <div class="slider__link-wrp">
-                  <h4 class="slider__subtitle">
-                    Проект собранный на интенсиве от Айтилогии
-                  </h4>
-                  <div>
-                    <a class="slider__link-site" href="!#">Перейти на сайт</a>
-                    <a class="slider__link-code" href="!#">Посмотреть код</a>
-                  </div>
+              <div class="faq-item">
+                <input
+                  class="faq-input"
+                  type="checkbox"
+                  name="faq"
+                  id="faq_2"
+                />
+                <label class="faq-title" for="faq_2">JavaScript</label>
+                <div class="faq-text">
+                  <a href="img/sertificats/javaScript.jpg" target="_blank"
+                    >JavaScript-лекции</a
+                  >
+                  <a
+                    href="img/sertificats/javaScript-seminar.jpg"
+                    target="_blank"
+                    >JavaScript-семинары</a
+                  >
                 </div>
-                <img
-                  class="slider-image"
-                  src="img/slider-projects/burger.jpg"
-                  alt="Сайт бургеры"
-                />
               </div>
-              <div class="slider-item">
-                <div class="slider__link-wrp">
-                  <h4 class="slider__subtitle">Проект с группой</h4>
-                  <div>
-                    <a class="slider__link-site" href="!#">Перейти на сайт</a>
-                    <a class="slider__link-code" href="!#">Посмотреть код</a>
-                  </div>
+              <div class="faq-item">
+                <input
+                  class="faq-input"
+                  type="checkbox"
+                  name="faq"
+                  id="faq_3"
+                />
+                <label class="faq-title" for="faq_3">Git</label>               
+                <div class="faq-text">
+                  <a href="img/sertificats/git.jpg" target="_blank"
+                    >Git-лекции</a
+                  >
+                  <a href="img/sertificats/git-seminar.jpg" target="_blank"
+                    >Git-семинары</a
+                  >
                 </div>
-                <img
-                  class="slider-image"
-                  src="img/slider-projects/firemoney.jpg"
-                  alt="Сайт firemoney"
-                />
               </div>
-              <div class="slider-item">
-                <div class="slider__link-wrp">
-                  <h4 class="slider__subtitle">Проект с группой</h4>
-                  <div>
-                    <a class="slider__link-site" href="!#">Перейти на сайт</a>
-                    <a class="slider__link-code" href="!#">Посмотреть код</a>
-                  </div>
+              <div class="faq-item">
+                <input
+                  class="faq-input"
+                  type="checkbox"
+                  name="faq"
+                  id="faq_4"
+                />
+                <label class="faq-title" for="faq_4">Итоговая аттестация</label>
+                <div class="faq-text">
+                  <a
+                    href="img/sertificats/final-examination.jpg"
+                    target="_blank"
+                  >Итоговая аттестация</a>
                 </div>
-                <img
-                  class="slider-image"
-                  src="img/slider-projects/Replication.jpg"
-                  alt="Сайт реплики картин"
-                />
               </div>
-              <div class="slider-item">
-                <div class="slider__link-wrp">
-                  <h4 class="slider__subtitle">Учебный проект</h4>
-                  <div>
-                    <a class="slider__link-site" href="!#">Перейти на сайт</a>
-                    <a class="slider__link-code" href="!#">Посмотреть код</a>
-                  </div>
+              <div class="faq-item">
+                <input
+                  class="faq-input"
+                  type="checkbox"
+                  name="faq"
+                  id="faq_5"
+                />
+                <label class="faq-title" for="faq_5"
+                  >Свидетельство об окончании обучения</label
+                >
+                <div class="faq-text">
+                  <a href="img/sertificats/sertificat1.jpg" target="_blank">Свидетельство об образовании</a>
+                  <a href="img/sertificats/sertificat2.jpg" target="_blank">Свидетельство об образовании</a>
                 </div>
-                <img
-                  class="slider-image"
-                  src="img/slider-projects/digital-marketing.jpg"
-                  alt="Сайт маркетинговый"
-                />
               </div>
-            </div>
-            <button class="slider-prev"></button>
-            <button class="slider-next"></button>
-            <div class="slider-wrapper">
-              <div class="slider-dot active-dot"></div>
-              <div class="slider-dot"></div>
-              <div class="slider-dot"></div>
-              <div class="slider-dot"></div>
-              <div class="slider-dot"></div>
-              <div class="slider-dot"></div>
-            </div>
+              <div class="faq-item">
+                
+                <input
+                  class="faq-input"
+                  type="checkbox"
+                  name="faq"
+                  id="faq_6"
+                />
+                <label class="faq-title" for="faq_6"
+                  >Интенсив от Айтилогии</label
+                >
+                <div class="faq-text">
+                  <a href="img/sertificats/sertificat-itilogia.jpeg" target="_blank"><img src="img/sertificats/sertificat-itilogia.jpeg" alt="" width="50"> О прохождении интенсива</a>
+                </div>
+              </div>
           </div>
         </div>
       </section>
