--- a/index.html
+++ b/index.html
@@ -1529,106 +1529,116 @@
       <section class="certificates">
         <div class="center">
           <h2 class="certificates__title">Свидетельства об обучении</h2>
-          <div class="certificates__image-wrapper">
-            <div class="faq">
-              <div class="faq-item">
+          <div class="certificates__accordion-wrp">
+            <div class="certificates__accordion">
+              <div class="accordion__item">
                 <input
-                  class="faq-input"
+                  class="accordion__input"
                   type="checkbox"
                   name="faq"
                   id="faq_1"
                 />
-                <label class="faq-title" for="faq_1"
+                <label class="accordion__title" for="faq_1"
                   >Веб-вёрстка HTML CSS</label
                 >
-                <div class="faq-text">
-                  <a href="img/sertificats/html.jpg" target="_blank"
-                    >HTML CSS-лекции</a
+                <div class="accordion__body-wrapper">
+                  <div class="accordion__body">
+                    <a href="img/sertificats/html.jpg" target="_blank"
+                    >Смотреть сертификат-HTML CSS-лекции</a
                   >
                   <a href="img/sertificats/html-seminar.jpg" target="_blank"
-                    >HTML CSS-Семинары</a
+                    >Смотреть сертификат-HTML CSS-Семинары</a
                   >
+                  </div>
                 </div>
               </div>
-              <div class="faq-item">
+              <div class="accordion__item">
                 <input
-                  class="faq-input"
+                  class="accordion__input"
                   type="checkbox"
                   name="faq"
                   id="faq_2"
                 />
-                <label class="faq-title" for="faq_2">JavaScript</label>
-                <div class="faq-text">
-                  <a href="img/sertificats/javaScript.jpg" target="_blank"
-                    >JavaScript-лекции</a
+                <label class="accordion__title" for="faq_2">JavaScript</label>
+                <div class="accordion__body-wrapper">
+                  <div class="accordion__body">
+                    <a href="img/sertificats/javaScript.jpg" target="_blank"
+                    >Смотреть сертификат-JavaScript-лекции</a
                   >
                   <a
                     href="img/sertificats/javaScript-seminar.jpg"
                     target="_blank"
-                    >JavaScript-семинары</a
+                    >Смотреть сертификат-JavaScript-семинары</a
                   >
+                  </div>
                 </div>
               </div>
-              <div class="faq-item">
+              <div class="accordion__item">
                 <input
-                  class="faq-input"
+                  class="accordion__input"
                   type="checkbox"
                   name="faq"
                   id="faq_3"
                 />
-                <label class="faq-title" for="faq_3">Git</label>               
-                <div class="faq-text">
-                  <a href="img/sertificats/git.jpg" target="_blank"
-                    >Git-лекции</a
+                <label class="accordion__title" for="faq_3">Git</label>               
+                <div class="accordion__body-wrapper">
+                  <div class="accordion__body">
+                    <a href="img/sertificats/git.jpg" target="_blank"
+                    >Смотреть сертификат-Git-лекции</a
                   >
                   <a href="img/sertificats/git-seminar.jpg" target="_blank"
-                    >Git-семинары</a
+                    >Смотреть сертификат-Git-семинары</a
                   >
+                  </div>
                 </div>
               </div>
-              <div class="faq-item">
+              <div class="accordion__item">
                 <input
-                  class="faq-input"
+                  class="accordion__input"
                   type="checkbox"
                   name="faq"
                   id="faq_4"
                 />
-                <label class="faq-title" for="faq_4">Итоговая аттестация</label>
-                <div class="faq-text">
-                  <a
+                <label class="accordion__title" for="faq_4">Итоговая аттестация</label>
+                <div class="accordion__body-wrapper">
+                  <div class="accordion__body"><a
                     href="img/sertificats/final-examination.jpg"
                     target="_blank"
-                  >Итоговая аттестация</a>
+                  >Смотреть сертификат-Итоговая аттестация</a></div>
                 </div>
               </div>
-              <div class="faq-item">
+              <div class="accordion__item">
                 <input
-                  class="faq-input"
+                  class="accordion__input"
                   type="checkbox"
                   name="faq"
                   id="faq_5"
                 />
-                <label class="faq-title" for="faq_5"
+                <label class="accordion__title" for="faq_5"
                   >Свидетельство об окончании обучения</label
                 >
-                <div class="faq-text">
-                  <a href="img/sertificats/sertificat1.jpg" target="_blank">Свидетельство об образовании</a>
+                <div class="accordion__body-wrapper">
+                  <div class="accordion__body">
+                    <a href="img/sertificats/sertificat1.jpg" target="_blank">Свидетельство об образовании</a>
                   <a href="img/sertificats/sertificat2.jpg" target="_blank">Свидетельство об образовании</a>
+                  </div>
                 </div>
               </div>
-              <div class="faq-item">
+              <div class="accordion__item">
                 
                 <input
-                  class="faq-input"
+                  class="accordion__input"
                   type="checkbox"
                   name="faq"
                   id="faq_6"
                 />
-                <label class="faq-title" for="faq_6"
+                <label class="accordion__title" for="faq_6"
                   >Интенсив от Айтилогии</label
                 >
-                <div class="faq-text">
-                  <a href="img/sertificats/sertificat-itilogia.jpeg" target="_blank"><img src="img/sertificats/sertificat-itilogia.jpeg" alt="" width="50"> О прохождении интенсива</a>
+                <div class="accordion__body-wrapper">
+                  <div class="accordion__body">
+                    <a href="img/sertificats/sertificat-itilogia.jpeg" target="_blank">Смотреть сертификат-интенсив от Айтилогии</a>
+                  </div>
                 </div>
               </div>
           </div>
