--- a/index.html
+++ b/index.html
@@ -198,14 +198,17 @@
               <span class="promo__name">Денис Никишков</span>
               <h1 class="promo__title">HTML-верстальщик</h1>
               <p class="promo__discription-text">
-                Привет! Меня зовут Денис! Я выпускник онлайн школы
-                <a href="https://gb.ru" target="_blank">GeekBrains!</a> Закончил
-                курс по специальности It-специалист-Вёрстка!В данный момент
-                прохожу обучение по специальности: Frontend-разработчик! Мой
-                опыт в сфере веб-верстки более 8-ми месяцев, за этот период мною
-                выполнены 6 проектов в целях учебной разработки. В свое
-                свободное время я люблю верстать интересные макеты и постоянно
-                совершенствую свои знания.
+                Привет!Я выпускник онлайн школы
+                <a href="https://gb.ru" target="_blank">GeekBrains!</a>
+                Закончил курс в мае 2023 года по специальности "It-специалист
+                Вёрстка"!В данный момент прохожу обучение по специальности
+                "Frontend-разработчик"! Мой опыт в сфере веб-верстки более 8-ми
+                месяцев, за этот период мною выполнены: 6 проектов в целях
+                учебной разработки, 1 проект на интенсиве от Айтилогии, 2
+                проекта сверстанные в команде онлайн и более двух проекта мною
+                лично.Владею адаптивной вёрсткой, БЭМ и также симантической
+                вёрсткой. В свободное время я верстаю интересные макеты и
+                постоянно совершенствую свои знания.
               </p>
               <a class="promo__link" href="#005">Связь со мной</a>
             </div>
